--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/flower.ico">
+  <meta name="description" content="My website">
+  <meta name="author" content="862177243">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jasmine Plascencia - Criminal Justice </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jasmine Plascencia </span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src=""img/profile.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jasmine Plascencia
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Criminal Justice📚</div>
+        <p class="lead mb-4"> 
+        
+        
+        I am currently employed by The Salvation Army as a Facility Monitor. Recognized throughout the world for its humanitarian work, thrift shops and red donation kettles, the Salvation Army is an evangelical Christian church. Its mission is to preach the gospel of Jesus Christ while helping others without discrimination. The Salvation Army, an international movement, is an evangelical part of the universal Christian church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination. The Salvation Army receives donations from a range of sources. These include the annual Neighbourhood Doorknock Appeal, street and pub/hotel collections, web site donations and people simply walking in off the street to make a gift to the work of The Salvation Army. A Monitor is responsible for monitoring the activities of residents of the shelter/center and to ensure compliance with program rules and expectations. He/she is also responsible for ensuring the safety of residents and the security and sanitation of the program.<br><br>
 
-        Enter bio here<br><br>
+         Coming from a lower middle class family, I had to work hard to obtain what I wanted. No one is perfect, and as human we live and we learn from our mistakes. There is very little a person can't do. At the end of the day, it all depends on how bad the individual wants to achieve their goal. As long as I set my mind to do it and don’t allow anyone to come between me and my motivation, I've always told myself that there's nothing I can’t do. Life’s tough, but I believe our mind is much stronger. Whenever I feel like quitting, I sit and remember how far I've come. Wherever we go, no matter the weather, always bring your own sunshine. If I want light to come into my life, I need to follow where it’s shining. Success is the sum of small efforts repeated day in and day out. 
 
-        Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://linkedin.com/in/jasmine-plascencia-0323b11bb/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/jplas008">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="instagram" href="https://instagram.com/syannne_28/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:jplas008@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Pool Lifeguard</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Los Angeles County</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Supervise pool activity  <br> 
+              • Warn patrons of saftey regualtions <br>
+              • Administor First Aid/ CPR, swimmer in distress if necessary <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">January 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Disaster Service Worker (DSW)</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Los Angeles County</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for distributing meals to residents<br>
+              • maintaining a clean work envrionment<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2020 </span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Facility Monitor </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">The Salvation Army </a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Monitored Facility<br>
+            • Distributed Meals <br>
+            • Complete all daily logs <br>
+            • Complete end of shift report to the oncoming shift<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">November 2020 - Present</span>
           </div>
         </div>
 
@@ -151,9 +153,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">California State Los Angeles</h3>
+            <div class="subheading mb-3">Masters in Criminal Justice</div>
+            <div>MBA in Criminal Justice</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - December 2019</span>
@@ -162,23 +164,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
+            <h3 class="mb-0">California State Los Angeles</h3>
+            <div class="subheading mb-3">Postgraduate Certificate in Criminal Justice</div>
             <div>Project Management</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
+            <h3 class="mb-0">California State Los Angeles</h3>
+            <div class="subheading mb-3">Criminal Justice</div>
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2016 - May 2020</span>
           </div>
         </div>
 
@@ -191,7 +193,7 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/CJ.jpeg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +201,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jasmine Plascencia</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
